--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 0;
         }
         .hero-section {
-            background-image: url('https://i.imgur.com/JYt8F2v.png');
+            background-image: url('https://github.com/Bushrahhh/OribtinPACE/blob/main/images/PLANET.jpg');
             background-size: cover;
             background-position: center;
             padding: 100px 20px;
