--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p>Collecting Ocean Data 🌊</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="path/to/image4.jpg" alt="Atmospheric Observation">
+                    <img src="https://github.com/Bushrahhh/OribtinPACE/blob/main/images/ATMOSPHERE.jpg" alt="Atmospheric Observation">
                     <p>Atmospheric Observations ☁️</p>
                 </div>
             </div>
