--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <h3 class="infographic-title">📊 How Does NASA PACE Collect Data?</h3>
             <p>Explore this infographic to see how NASA's PACE satellite observes Earth's atmosphere and oceans from space, providing critical data for our planet's future.</p>
             <div class="infographic-container">
-                <img src="https://github.com/Bushrahhh/OribtinPACE/blob/main/images/Info.jpeg" alt="NASA PACE Infographic">
+                <img src=""C:\Users\amc\OneDrive\Desktop\Info.jpeg"" alt="NASA PACE Infographic">
             </div>
         </div>
 
