--- a/index.html
+++ b/index.html
@@ -377,13 +377,14 @@
 <!-- JavaScript for Buttons and Data Simulation -->
 <script>
     function watchVideo() {
-        alert("Launching NASA PACE Mission Video... 🚀");
+        window.open("https://www.nasa.gov/pace", "_blank"); // Replace with your video link
     }
 
     function exploreMore() {
-        alert("Exploring NASA PACE Mission... 🌌");
+        window.open("https://www.nasa.gov/pace", "_blank"); // Replace with your exploration link
     }
 </script>
+
 
 <!-- Fun Facts - Cool Ocean & NASA PACE Facts -->
 <section id="funfacts" class="wrapper style1 space-themed">
