--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 <!-- JavaScript for Buttons and Data Simulation -->
 <script>
     function watchVideo() {
-        window.open("https://www.nasa.gov/pace", "_blank"); // Replace with your video link
+        window.open("https://youtu.be/dFKJbzTRvZE", "_blank"); // Replace with your video link
     }
 
     function exploreMore() {
