--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <img src="images/PACE.jpg" alt="Planet" style="height: 220px;">
             </div>
             <div style="position: absolute; bottom: 8%; right: 12%; animation: spaceshipFly 7s infinite linear;">
-                <img src="images/ATMOSPHERE.jpg" alt="Spaceship" style="height: 130px;">
+                <img src="https://github.com/Bushrahhh/OribtinPACE/blob/main/images/ATMOSPHERE.jpg?raw=true" alt="Spaceship" style="height: 130px;">
             </div>
 
             <!-- Brighter Starfield and Nebula -->
