--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 
     <!-- Floating Elements for Visual Impact -->
     <div style="position: absolute; top: 12%; left: 8%; animation: floatPlanet 12s infinite ease-in-out;">
-        <img src="images/planet_light.png" alt="Planet" style="height: 220px;">
+        <img src="images/PACE.jpg" alt="Planet" style="height: 220px;">
     </div>
     <div style="position: absolute; bottom: 8%; right: 12%; animation: spaceshipFly 7s infinite linear;">
-        <img src="images/spaceship_light.png" alt="Spaceship" style="height: 130px;">
+        <img src="images/OBSERVING_EARTH.jpg" alt="Spaceship" style="height: 130px;">
     </div>
 
     <!-- Brighter Starfield and Nebula -->
@@ -247,7 +247,7 @@
             <h3 class="infographic-title">📊 How Does NASA PACE Collect Data?</h3>
             <p>Explore this infographic to see how NASA's PACE satellite observes Earth's atmosphere and oceans from space, providing critical data for our planet's future.</p>
             <div class="infographic-container">
-                <img src="https://github.com/Bushrahhh/OribtinPACE/blob/main/images/Info.jpeg" alt="NASA PACE Infographic">
+                <img src="images/Info.jpeg" alt="NASA PACE Infographic">
             </div>
         </div>
 
@@ -256,19 +256,19 @@
             <h3 class="gallery-title">🛰 NASA PACE Space Gallery</h3>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="path/to/image1.jpg" alt="PACE Satellite Launch">
+                    <img src="images/LAUNCH.jpg" alt="PACE Satellite Launch">
                     <p>PACE Satellite Launch 🚀</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="path/to/image2.jpg" alt="Observing Earth from Space">
+                    <img src="images/OBSERVING_EARTH.jpg" alt="Observing Earth from Space">
                     <p>Observing Earth from Space 🌍</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="path/to/image3.jpg" alt="Ocean Data Collection">
+                    <img src="images/OCEAN_DATAA.jpg" alt="Ocean Data Collection">
                     <p>Collecting Ocean Data 🌊</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://github.com/Bushrahhh/OribtinPACE/blob/main/images/ATMOSPHERE.jpg" alt="Atmospheric Observation">
+                    <img src="images/ATMOSPHERE.jpg" alt="Atmospheric Observation">
                     <p>Atmospheric Observations ☁</p>
                 </div>
             </div>
